src/objects/Recruiting_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Application_Created_Date__c</fullName>
        <label>Application Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Recruiting Tracker Records</relationshipLabel>
        <relationshipName>Recruiting_Tracker_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Collected__c</fullName>
        <label>Date/Time Collected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Recruiting Tracker Records</relationshipLabel>
        <relationshipName>Recruiting_Tracker_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Recruiting Tracker Records</relationshipLabel>
        <relationshipName>Recruiting_Tracker_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recruiting Tracker</label>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Recruiting Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruiting Tracker Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>